client/src/App.css
/* ... */
.not-found-page__link a:hover {
  color: var(--dark4);
  border-bottom: 3px dotted var(--dark4);
  transition: 0.2s;
}
@media (width < 650px) {
  .not-found-page__contents-container {
    margin-bottom: 0.75rem;
  }
  .not-found-page__icon {
    font-size: 6rem;
  }
  .not-found-page__message {
    font-size: 2rem;
  }
  .not-found-page__link {
    font-size: 1.5rem;
  }
}

/* Email Verify Page CSS */
.email-verify-page__container {
  background-color: var(--offWhite);
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: auto;
}
.email-verify-page__contents-container {
  max-width: var(--siteContentsMaxWidth);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: auto;
  padding-bottom: 7rem;
  min-height: 100%;
  color: var(--dark2);
}
.email-verify-page__email-image-success {
  font-size: 12rem;
  color: rgb(29, 152, 29);
}
.email-verify-page__message-container-success {
  text-align: center;
}
.email-verify-page__email-image-container-fail {
  position: relative;
}
.email-verify-page__email-image-envelope-fail {
  font-size: 12rem;
  color: rgb(185, 51, 51);
}
.email-verify-page__email-image-x-fail {
  position: absolute;
  bottom: 0;
  right: 0;
  font-size: 6rem;
  color: rgb(137, 36, 36);
}
.email-verify-page__message-container-fail {
  text-align: center;
  max-width: 90ch;
}

/* Green Banner CSS */
.green-banner__container {
  max-width: 100vw;
  height: 40px;
  background-color: rgb(29, 152, 29);
}
.green-banner__contents-container {
  max-width: var(--siteContentsMidWidth);
  height: 40px;
  padding-left: var(--sideSpacePadding);
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 0.8rem;
  margin: auto;
}
.green-banner__exclamation-icon {
  font-size: 1.5rem;
  color: rgb(24, 102, 24);
}
.green-banner__contents-container div {
  color: rgb(241, 241, 241);
}

@media (width < 650px) {
  .green-banner__container {
    position: absolute;
    top: 70px;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    height: auto;
    width: 100%;
  }
  .green-banner__contents-container {
    padding-right: 2rem;
  }
  .green-banner__exclamation-icon {
    font-size: 0.85rem;
  }
  .green-banner__contents-container div {
    font-size: 0.75rem;
  }
}

/* Red Banner CSS */
.red-banner__container {
  max-width: 100vw;
  width: 100%;
  min-height: 40px;
  padding: 0.5rem 0.5rem 0.5rem 0px;
  background-color: #b20000;
  z-index: 5;
  position: absolute;
  top: 80px;
}
.red-banner__contents-container {
  max-width: var(--siteContentsMidWidth);
  min-height: 40px;
  padding-left: var(--sideSpacePadding);
  padding-right: 2rem;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 0.8rem;
  margin: auto;
}
.red-banner__exclamation-icon {
  font-size: 1.5rem;
  color: #7f0000;
}
.red-banner__contents-container div {
  color: rgb(241, 241, 241);
}

@media (width < 650px) {
  .red-banner__container {
    top: 70px;
  }
  .red-banner__container,
  .red-banner__contents-container {
    min-height: 30px;
  }
  .red-banner__contents-container {
    padding-left: 15px;
    gap: 0.35rem;
  }

  .red-banner__exclamation-icon {
    font-size: 1.25rem;
  }
  .red-banner__contents-container div {
    font-size: 0.75rem;
  }
}

.profile-pic__small {
  border-radius: 50%;
  width: 32px;
  height: 32px;
  object-fit: cover;
}

/* MainPage CSS*/

.mainPage__heroPicture {
  min-height: 510px;
  background-color: #000;
}

/* Home Page Navbar Searchbar */

.carousel__search-container {
  position: relative;
  width: 100%;
  margin-top: 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.carousel__search-button {
  background-color: white;
  height: 48px;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
  padding: 1rem;
  padding-left: 2.25rem;
  position: relative;
}

.carousel__search-icon {
  color: #747474;
  font-size: 1.25rem;
  transition: 0.05s ease;
  position: absolute;
  top: 30%;
  left: 31%;
}

.carousel__search-button:hover .carousel__search-icon {
  color: #4d81d6;
  transition: 0.05s ease;
}

.carousel__search-bar {
  border: none;
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
  max-width: 38rem;
  width: 100%;
  font-size: 1rem;
  font-weight: 500;
  padding: 0.5rem 1.25rem;
  padding-right: 32px;
  outline: none;
  color: #747474;
  height: 48px;
  /* animation: fadeIn 0.6s; */
}

/* Normal Navbar Searchbar */

.carousel__contents {
}

.heroImage {
  width: 100%;
  height: 28.125rem;
  object-fit: cover;
}

.carousel__container {
  max-height: 512px;
  position: relative;
  z-index: 1;
}
.carousel__black-bg-for-image {
  background-color: #000;
  width: 100%;
  height: 512px;
}
.carousel__hero-image {
  /* position: absolute;
  top: 0;
  left: 0; */
  width: 100%;
  height: 512px;
  object-fit: cover;
  opacity: 0.7;
  background-image: url("../src/images/4k/pexels-water-rocks-4k-blur.jpg");
  background-size: cover;
  background-position: 50% 40%;
}
.carousel__hero-image-blur {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 512px;
  object-fit: cover;
}

.carousel__overlay {
  width: 100%;
  font-size: 2rem;
  font-weight: bold;
  position: absolute;
  top: 10.25rem;
  z-index: 100;
  color: white;
  margin: auto;
  padding: 0 16px;
}

.carousel__overlay h1 {
  max-width: 35ch;
  font-weight: 700;
  margin: auto;
  font-size: 2rem;
  line-height: 1.5;
}

.carousel__overlay-categories {
  /* margin-top: 0.8rem; */
  max-width: 70ch;
  font-size: 1rem;
  padding: 1.34rem 0;
  line-height: 1;
  margin: auto;
  display: flex;
  gap: 0.3rem;
}
.carousel__overlay-categories ul {
  display: flex;
}

.carousel__overlay-categories a {
  padding: 0.25rem 0.13rem;
  color: white;
  transition: 0.1s ease-in-out;
  text-decoration: none;
  font-size: 0.9rem;
}
/* ... */

